minor changes in notebooks with version numbers of software

--- a/Notebooks/forecast_glSNe_old.ipynb
+++ b/Notebooks/forecast_glSNe_old.ipynb
@@ -9,8 +9,8 @@
     "\n",
     "\n",
     "To run the notebook, the following software is required:\n",
-    "- hierArc: https://github.com/sibirrer/hierArc (main branch)\n",
-    "- lenstronomy: https://github.com/sibirrer/lenstronomy (main branch)\n",
+    "- hierArc: https://github.com/sibirrer/hierArc (version 1.1.0)\n",
+    "- lenstronomy: https://github.com/sibirrer/lenstronomy (version 1.9.0)\n",
     "- corner: https://github.com/dfm/corner.py\n",
     "- emcee: https://github.com/dfm/emcee\n",
     "\n",
